--- a/movie-api-with-redux/package.json
+++ b/movie-api-with-redux/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "learning-redux",
+  "name": "movie-api-with-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
-    "react-scripts": "3.1.1",
-    "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
