--- a/react-setting-up-env/package.json
+++ b/react-setting-up-env/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "react-setting-up-env",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "react_wo_bp",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "webpack-dev-server",
+		"build": "webpack"
+	},
+	"keywords": [],
+	"license": "MIT",
+	"dependencies": {
+		"path": "0.12.7",
+		"react": "16.8.6",
+		"react-dom": "16.8.6"
+	},
+	"devDependencies": {
+		"@babel/core": "7.5.0",
+		"@babel/preset-env": "7.5.0",
+		"@babel/preset-react": "7.0.0",
+		"babel-loader": "8.0.6",
+		"css-loader": "3.0.0",
+		"html-webpack-plugin": "3.2.0",
+		"style-loader": "0.23.1",
+		"webpack": "4.35.2",
+		"webpack-cli": "3.3.5",
+		"webpack-dev-server": "3.7.2"
+	}
 }
